--- a/SlidingPanelSample/SlidingPanelSampleUniversal/SlidingPanelSample.Windows/MainPage.xaml
+++ b/SlidingPanelSample/SlidingPanelSampleUniversal/SlidingPanelSample.Windows/MainPage.xaml
@@ -8,6 +8,31 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0" Height="60" Background="Black">
+            <TextBlock
+                Margin="12"
+                Style="{ThemeResource TitleTextBlockStyle}"
+                Foreground="White"
+                Text="SLIDING PANEL SAMPLE (UNIVERSAL)" />
+        </Grid>
+        
+        <StackPanel Grid.Row="1" Margin="12">
+            <TextBlock
+                Style="{ThemeResource BodyTextBlockStyle}"
+                Foreground="White"
+                TextWrapping="Wrap"
+                Text="This sample is hosted in GitHub:" />
+            <HyperlinkButton
+                Foreground="White"
+                FontSize="24"
+                NavigateUri="https://github.com/tompaana/my-2-bits/tree/master/SlidingPanelSample"
+                Content="github.com/tompaana/my-2-bits/" />
+        </StackPanel>
 
+        <local:SlidingPanel Grid.Row="1" />
     </Grid>
 </Page>
