--- a/BLEBeaconSample/BLEBeaconSample/BeaconUserControl.xaml
+++ b/BLEBeaconSample/BLEBeaconSample/BeaconUserControl.xaml
@@ -43,7 +43,7 @@
             <TextBlock
                 Style="{StaticResource BodyTextBlockStyle}"
                 Foreground="{ThemeResource SystemControlForegroundBaseHighBrush}"
-                Text="{Binding ProximityUuid, FallbackValue='de305d54-75b4-431b-adb2-eb6b9e546014'}" />
+                Text="{Binding Id1, FallbackValue='de305d54-75b4-431b-adb2-eb6b9e546014'}" />
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width=".5*" />
@@ -58,13 +58,13 @@
 						Grid.Column="0"
 						Style="{StaticResource BodyTextBlockStyle}"
 						Foreground="{ThemeResource SystemControlForegroundBaseHighBrush}"
-						Text="Major:" />
+						Text="ID 2:" />
                     <TextBlock
 						Grid.Column="1"
                         Margin="6,0,0,0"
 						Style="{StaticResource BodyTextBlockStyle}"
 						Foreground="{ThemeResource SystemControlForegroundBaseHighBrush}"
-						Text="{Binding Major, FallbackValue=1234}" />
+						Text="{Binding Id2, FallbackValue=1234}" />
                 </Grid>
                 <Grid Grid.Column="1">
                     <Grid.ColumnDefinitions>
@@ -75,13 +75,13 @@
 						Grid.Column="0"
 						Style="{StaticResource BodyTextBlockStyle}"
 						Foreground="{ThemeResource SystemControlForegroundBaseHighBrush}"
-						Text="Minor:" />
+						Text="ID 3:" />
                     <TextBlock
 						Grid.Column="1"
                         Margin="6,0,0,0"
 						Style="{StaticResource BodyTextBlockStyle}"
 						Foreground="{ThemeResource SystemControlForegroundBaseHighBrush}"
-						Text="{Binding Minor, FallbackValue=5678}" />
+						Text="{Binding Id3, FallbackValue=5678}" />
                 </Grid>
             </Grid>
             <TextBlock
