--- a/ProcessMonitorSample/ProcessMonitorUwp/MainPage.xaml
+++ b/ProcessMonitorSample/ProcessMonitorUwp/MainPage.xaml
@@ -3,11 +3,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ProcessMonitorUwp"
+    xmlns:logging="using:ProcessMonitorUwp.Logging"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+        <logging:LogControl x:Name="logControl" />
     </Grid>
 </Page>
