--- a/ProcessMonitorSample/ProcessMonitorWpf/MainWindow.xaml
+++ b/ProcessMonitorSample/ProcessMonitorWpf/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProcessMonitorWpf"
-        xmlns:logging="clr-namespace:ProcessMonitorUwp.Logging"
+        xmlns:logging="clr-namespace:ProcessMonitor.Logging"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
