Fixed the logging issue in WPF app.

--- a/ProcessMonitorSample/SharedCode/Logging/LogControl.xaml
+++ b/ProcessMonitorSample/SharedCode/Logging/LogControl.xaml
@@ -14,7 +14,7 @@
             ItemsSource="{Binding Path=LogItems, ElementName=thisControl}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Grid Background="Green">
+                    <Grid>
                         <TextBlock
                             x:Name="messageTextBlock"
                             Margin="6"
