--- a/ProcessMonitorSample/ProcessMonitorWpf/MainWindow.xaml
+++ b/ProcessMonitorSample/ProcessMonitorWpf/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ProcessMonitorWpf"
         xmlns:logging="clr-namespace:ProcessMonitor.Logging"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Process Monitor (WPF)" Height="350" Width="525">
     <Grid>
         <logging:LogControl x:Name="logControl" />
     </Grid>
